# D95eq

./: .zenodo.json  LICENSE  build-metadata.py  build_doc.py  changelog.md  example_data.csv  justfile  pyproject.toml  readme.md  requirements.txt  todo.md  update-version.py
calib_coefs/: D47_calib_coefs.csv  D48_calib_coefs.csv  calib_coefs.py
docpages/: cli.md  install.md
docs/: index.html
engine-sandbox/: ananas.py  compute-inverse-pdf.py  main.py
examples/: Teq-report.csv  example.py  example_data.csv  example_qmc.py  examples.py  large_example.py  output.csv  output_0_nearest_D47eq.csv  output_0_nearest_Teq.csv  output_1_joint_nearest_D47eq.csv  output_1_joint_nearest_Teq.csv  output_2_lazy_joint_nearest_D47eq.csv  output_2_lazy_joint_nearest_Teq.csv
src/D95eq/: __init__.py  _metadata.py  _tools.py
src/D95thermo/: __init__.py  _metadata.py  _tools.py
src/D95thermometry/: __init__.py
test/: output.csv  test.py  test_data.csv
tests/: basic_test.py  confidence_band_test.py  interp_test.py  plotting_test.py  qmc_test.py  thermo_test.py
