[project]
name = "D95thermo"
version = "0.9.1"
description = "Estimate carbonate formation temperatures from dual clumped isotope measurements"
readme = "readme.md"
requires-python = ">=3.14"
dependencies = [
    "correldata>=1.6.0",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "ogls>=1.0.1",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[project.urls]
Home = "https://github.com/mdaeron/D95thermo"
Documentation = "https://mdaeron.github.io/D95thermo"

[project.scripts]
D95thermo = "D95thermo:__cli"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
	"pdoc>=16.0.0",
    "flit>=3.12.0",
]
