[project]
name = "D95thermo"
version = "1.0.0b1"
description = "Estimate carbonate formation temperatures from dual clumped isotope measurements"
readme = "readme.md"
license = { "text" = "MIT License: https://opensource.org/licenses/MIT" }
authors = [
	{ name = "Mathieu Daëron",  email = "mathieu@daeron.fr" },
	{ name = "Timothy Pollard", email = "timothy.pollard@unimelb.edu.au" }
]
requires-python = ">=3.14"
dependencies = [
	"correldata>=2.0.0",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "ogls>=1.0.1",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[project.urls]
Home = "https://github.com/mdaeron/D95thermo"
Documentation = "https://mdaeron.github.io/D95thermo"

[project.scripts]
D95thermo = "D95thermo:__cli"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
	"pdoc>=16.0.0",
	"flit>=3.12.0",
	"pytest>=9.0.2",
]

[tool.pytest.ini_options]
filterwarnings = [
	"ignore::pytest.PytestCollectionWarning",
	"ignore::FutureWarning",
]

# [tool.uv.sources]
# correldata = { path = "../correldata", editable = true }
