[project]
name = "D95eq"
version = "1.2.1"
description = "Test for clumped isotope equilibrium and estimate carbonate formation temperatures from dual clumped isotope measurements"
readme = "readme.md"
license = "MIT"
classifiers = ["License :: OSI Approved :: MIT License"]
authors = [
	{ name = "Mathieu Daëron",  email = "mathieu@daeron.fr" },
	{ name = "Timothy Pollard", email = "timothy.pollard@unimelb.edu.au" }
]
requires-python = ">=3.14"
dependencies = [
	"correldata>=2.0.0",
	"lmfit>=1.3.4",
	"matplotlib>=3.10.8",
	"ogls>=1.0.1",
	"tqdm>=4.67.1",
	"typer>=0.21.1",
	"typing-extensions>=4.15.0",
]

[project.urls]
Home = "https://github.com/mdaeron/D95eq"
Documentation = "https://mdaeron.github.io/D95eq"

[project.scripts]
D95eq = "D95eq:__cli"

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "D95eq"

[dependency-groups]
dev = [
	"pdoc>=16.0.0",
	"flit>=3.12.0",
	"pytest>=9.0.2",
]

[tool.pytest.ini_options]
filterwarnings = [
	"ignore::pytest.PytestCollectionWarning",
	"ignore::FutureWarning",
]

# [tool.uv.sources]
# correldata = { path = "../correldata", editable = true }
